--- a/df_0.ipynb
+++ b/df_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1369,
+   "execution_count": 1456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1370,
+   "execution_count": 1457,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('datasets/cars_data.csv')\n",
-    "df_c = df.copy()"
+    "df = pd.read_csv('datasets/cars_data.csv')\n"
    ]
   },
   {
@@ -37,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1371,
+   "execution_count": 1458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1372,
+   "execution_count": 1459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1373,
+   "execution_count": 1460,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1374,
+   "execution_count": 1461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1375,
+   "execution_count": 1462,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1376,
+   "execution_count": 1463,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1377,
+   "execution_count": 1464,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1378,
+   "execution_count": 1465,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1379,
+   "execution_count": 1466,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1380,
+   "execution_count": 1467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1381,
+   "execution_count": 1468,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +288,7 @@
        "Name: price, dtype: float64"
       ]
      },
-     "execution_count": 1381,
+     "execution_count": 1468,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,16 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1382,
+   "execution_count": 1469,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a38137b50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a3a1d4f10>"
       ]
      },
-     "execution_count": 1382,
+     "execution_count": 1469,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -362,32 +361,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1383,
+   "execution_count": 1470,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a381ad110>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a381dd890>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a38179c10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a383e28d0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a384bac50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a384f0910>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3852ed90>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a38565950>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a3856e4d0>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a385a2e50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a38616d10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3864d9d0>],\n",
-       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a3868bd50>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a386bfa10>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a386fed90>,\n",
-       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a38733a50>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x1a3974e210>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a2994d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a166c90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a1014d0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a3a427cd0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a51e510>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a551d10>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a58d550>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a3a5990d0>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a5cca50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a636d90>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a3a6785d0>],\n",
+       "       [<matplotlib.axes._subplots.AxesSubplot object at 0x1a32d82790>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a39ecfa50>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a39f1c810>,\n",
+       "        <matplotlib.axes._subplots.AxesSubplot object at 0x1a396f9b50>]],\n",
        "      dtype=object)"
       ]
      },
-     "execution_count": 1383,
+     "execution_count": 1470,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1384,
+   "execution_count": 1471,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1385,
+   "execution_count": 1472,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1386,
+   "execution_count": 1473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1387,
+   "execution_count": 1474,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1388,
+   "execution_count": 1475,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +486,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 1388,
+     "execution_count": 1475,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1389,
+   "execution_count": 1476,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +523,7 @@
        "                      presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 1389,
+     "execution_count": 1476,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1390,
+   "execution_count": 1477,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +567,7 @@
        "                      verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 1390,
+     "execution_count": 1477,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1391,
+   "execution_count": 1478,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +604,7 @@
      "text": [
       "Linear Regression RMSE: 0.5907861696081874\n",
       "Decision Tree Regression RMSE: 0.13034878226591437\n",
-      "Random Forest Regression RMSE: 0.2356284837696139\n"
+      "Random Forest Regression RMSE: 0.27150292232856654\n"
      ]
     }
    ],
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1392,
+   "execution_count": 1479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1393,
+   "execution_count": 1480,
    "metadata": {},
    "outputs": [
     {
@@ -663,15 +662,15 @@
       "Mean: 0.6072832244577461\n",
       "Standard Deviation: 0.1849936921243778\n",
       "tree_rmse\n",
-      "Scores: [0.45630516 0.28717734 0.19407416 0.35142947 0.46247987 0.42783972\n",
-      " 0.58876688 0.37611384 1.00460343 0.48660595] Score len: 10\n",
-      "Mean: 0.4635395815731111\n",
-      "Standard Deviation: 0.20837925744936014\n",
+      "Scores: [0.45413293 0.30316283 0.19407416 0.35142947 0.41382346 0.42783972\n",
+      " 0.58884075 0.37611384 0.90401301 0.45255067] Score len: 10\n",
+      "Mean: 0.4465980832575626\n",
+      "Standard Deviation: 0.18147913039005398\n",
       "forest_rmse\n",
-      "Scores: [0.41588344 0.35767182 0.21783013 0.2763334  0.49769645 0.36881242\n",
-      " 0.46871227 0.31080314 0.86434676 0.49110584] Score len: 10\n",
-      "Mean: 0.4269195664735414\n",
-      "Standard Deviation: 0.17040819228876064\n"
+      "Scores: [0.42249744 0.26444557 0.20415686 0.28074918 0.4882158  0.34971922\n",
+      " 0.42762084 0.29387721 0.83453904 0.51463049] Score len: 10\n",
+      "Mean: 0.4080451657224925\n",
+      "Standard Deviation: 0.17178726827913166\n"
      ]
     }
    ],
@@ -693,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1364,
+   "execution_count": 1481,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1366,
+   "execution_count": 1482,
    "metadata": {
     "scrolled": true
    },
@@ -717,10 +716,10 @@
     {
      "data": {
       "text/plain": [
-       "['models/forest_reg.pkl']"
+       "['models/df_0_forest_reg.pkl']"
       ]
      },
-     "execution_count": 1366,
+     "execution_count": 1482,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1367,
+   "execution_count": 1483,
    "metadata": {},
    "outputs": [
     {
@@ -779,56 +778,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1368,
+   "execution_count": 1484,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "30760 \t 25050\n",
-      "10295 \t 21407\n",
-      "9549 \t 9675\n",
-      "11850 \t 14204\n",
-      "28248 \t 29639\n",
-      "7799 \t 6909\n",
-      "7788 \t 7559\n",
-      "9258 \t 8574\n",
-      "10198 \t 10719\n",
-      "7775 \t 8335\n",
-      "13295 \t 15397\n",
-      "8238 \t 8227\n",
-      "18280 \t 20611\n",
-      "9988 \t 11049\n",
-      "40960 \t 42370\n",
-      "6488 \t 6461\n",
-      "5151 \t 7342\n",
-      "12629 \t 13195\n",
-      "8189 \t 7806\n",
-      "9960 \t 10347\n",
-      "8495 \t 10260\n",
-      "13499 \t 14774\n",
-      "8249 \t 6909\n",
-      "6479 \t 7252\n",
-      "6692 \t 6691\n",
-      "41315 \t 25050\n",
-      "9639 \t 11139\n",
-      "13415 \t 17180\n",
-      "7999 \t 6909\n",
-      "12940 \t 17180\n",
-      "25552 \t 29639\n",
-      "6229 \t 6691\n",
-      "7898 \t 8419\n",
-      "21485 \t 16654\n",
-      "7689 \t 10502\n",
-      "28176 \t 29639\n",
-      "11259 \t 12331\n",
-      "10945 \t 12505\n",
-      "10295 \t 7839\n",
-      "14489 \t 13195\n",
-      "7463 \t 7719\n",
-      "0.2689517010219521\n",
-      "15269.410400275448\n"
+      "30760 \t 25990\n",
+      "10295 \t 19876\n",
+      "9549 \t 9088\n",
+      "11850 \t 14109\n",
+      "28248 \t 26675\n",
+      "7799 \t 6894\n",
+      "7788 \t 7389\n",
+      "9258 \t 8053\n",
+      "10198 \t 10517\n",
+      "7775 \t 8125\n",
+      "13295 \t 14154\n",
+      "8238 \t 6795\n",
+      "18280 \t 21579\n",
+      "9988 \t 10875\n",
+      "40960 \t 42415\n",
+      "6488 \t 6394\n",
+      "5151 \t 7188\n",
+      "12629 \t 13290\n",
+      "8189 \t 7935\n",
+      "9960 \t 9744\n",
+      "8495 \t 10265\n",
+      "13499 \t 15364\n",
+      "8249 \t 6894\n",
+      "6479 \t 6929\n",
+      "6692 \t 6737\n",
+      "41315 \t 25990\n",
+      "9639 \t 12337\n",
+      "13415 \t 17496\n",
+      "7999 \t 6894\n",
+      "12940 \t 17496\n",
+      "25552 \t 26675\n",
+      "6229 \t 6737\n",
+      "7898 \t 7865\n",
+      "21485 \t 16728\n",
+      "7689 \t 9213\n",
+      "28176 \t 26675\n",
+      "11259 \t 10486\n",
+      "10945 \t 14045\n",
+      "10295 \t 7164\n",
+      "14489 \t 13290\n",
+      "7463 \t 7939\n",
+      "0.26125259470777196\n",
+      "15208.748207523788\n"
      ]
     }
    ],
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1238,
+   "execution_count": 1485,
    "metadata": {
     "scrolled": true
    },
@@ -950,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1040,
+   "execution_count": 1486,
    "metadata": {},
    "outputs": [
     {
@@ -960,7 +959,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1040-ec2fc56b0f60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# to save\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'my_model.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# to read from pickel ( .pkl ) file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmy_model_loaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'my_model.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-1486-ec2fc56b0f60>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# to save\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'my_model.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;31m# to read from pickel ( .pkl ) file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmy_model_loaded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjoblib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'my_model.pkl'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'my_model' is not defined"
      ]
     }
